<resources>
    <string name="app_name">RBC Footprint</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Client card or Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="learn">LEARN</string>
    <string name="daily">DAILY</string>
    <string name="next">Next</string>
    <string name="skip">SKIP</string>
    <string name="answer">ANSWER</string>
    <string name="check">✓</string>
    <string name="wrong">✗</string>
    <string name="select_activity">Select an activity and start earning points!</string>
    <string name="available_activities">Available Activities</string>
    <string name="back">←</string>
    <string name="question_1">__% of clothing that people donate to thrift stores and charities.</string>
    <string name="question_2">How long does it take for polyester to break down?</string>
    <string name="question_3">How much water is needed to produce 1kg of cotton?</string>
    <string name="correct_ans_1">Correct! Only 10% of clothing are reused/resold. The rest ends up in landfills</string>
    <string name="incorrect_ans_1">Incorrect. Only 10% of clothing are reused/resold. The rest ends up in landfills.</string>

    <string name="save">save</string>
    <string name="_5">5%</string>
    <string name="_10">10%</string>
    <string name="_35">35%</string>
    <string name="_60">60%</string>
    <string name="question_1_3">Question 1/3</string>
    <string name="welcome_to_footprint">Welcome to Footprint</string>
    <string name="welcome_msg">Learn to make sustainable changes to your everyday choices while earning points.</string>
    <string name="points">Collect points by performing activities related to the environment.</string>
    <string name="tips_tricks"><![CDATA[Tips & Tricks]]></string>
    <string name="fact1">1. Pass down your clothes to your relatives or even friends!</string>
    <string name="easy_ways_to_conserve">Easy ways to conserve!</string>
    <string name="bags">2. Invest in reusable grocery bags</string>
    <string name="fact3">3. Wear more or less instead of turning on the heat or AC!</string>
</resources>